Updates regarding SCEECS'24

--- a/about.html
+++ b/about.html
@@ -371,10 +371,10 @@
                 <div class="dots-one"></div>
                 <div class="dots-two"></div>
                 <div class="image">
-                  <img src="images/resource/jyotisinghai.jpeg" alt="" />
+                  <img src="images/resource/Dheeraj_Agrawal_Sir.jpg" alt="" />
                 </div>
                 <div class="lower-content">
-                  <h3><a href="#">Dr. Jyoti Singhai</a></h3>
+                  <h3><a href="#">Dr. Dheeraj Kumar Agarwal</a></h3>
                   <div class="designation">Organizing Chair</div>
                 </div>
               </div>
@@ -435,10 +435,10 @@
                 <div class="dots-one"></div>
                 <div class="dots-two"></div>
                 <div class="image">
-                  <img src="./images/Tilak.jpg" alt="" />
+                  <img src="./images/contactTeam/vedant.jpg" alt="" />
                 </div>
                 <div class="lower-content">
-                  <h3><a href="#">Mr. Tilak Mangal</a></h3>
+                  <h3><a href="#">Mr. Vedant Jaiswal</a></h3>
                   <div class="designation">Organizing Co-Chair</div>
                 </div>
               </div>
@@ -450,10 +450,10 @@
                 <div class="dots-one"></div>
                 <div class="dots-two"></div>
                 <div class="image">
-                  <img src="./images/Ayush Verma.jpg" alt="" />
+                  <img src="./images/contactTeam/Yashika.jpg" alt="" />
                 </div>
                 <div class="lower-content">
-                  <h3><a href="#">Mr. Ayush Verma </a></h3>
+                  <h3><a href="#">Ms. Yashika Lawani </a></h3>
                   <div class="designation">Publication Co-Chair</div>
                 </div>
               </div>
@@ -465,11 +465,11 @@
                 <div class="dots-one"></div>
                 <div class="dots-two"></div>
                 <div class="image">
-                  <img src="./images/Deepanshu Jain.jpg" alt="" />
+                  <img src="./images/contactTeam/priyanshi_khandelwal.jpg" alt="" />
                 </div>
                 <div class="lower-content">
                   <h3 style="font-size: 25px">
-                    <a href="#">Mr. Deepanshu Jain</a>
+                    <a href="#">Ms. Priyanshi Khandelwal</a>
                   </h3>
                   <div class="designation">Program Co-Chair</div>
                 </div>
@@ -482,10 +482,10 @@
                 <div class="dots-one"></div>
                 <div class="dots-two"></div>
                 <div class="image">
-                  <img src="./images/Rohaan khan.jpg" alt="" />
+                  <img src="./images/contactTeam/vvk.jpg" alt="" />
                 </div>
                 <div class="lower-content">
-                  <h3><a href="#">Mr. Rohaan Khan</a></h3>
+                  <h3><a href="#">Mr. Vivek Kumar</a></h3>
                   <div class="designation">Finance Co-Chair</div>
                 </div>
               </div>
@@ -506,6 +506,145 @@
         </div>
         <div class="outer-container">
           <div class="gallery-carousel owl-carousel owl-theme">
+
+            <!-- Gallery Block -->
+            <div class="gallery-block">
+              <div class="inner-box">
+                <div class="image">
+                  <img src="images/SCEECS/SCEECS24_4.JPG" alt="" />
+                  <!-- Overlay Box -->
+                  <div class="overlay-box">
+                    <div class="overlay-inner">
+                      <div class="overlay-content">
+                        <a
+                          class="plus"
+                          href="images/SCEECS/SCEECS24_4.JPG"
+                          data-fancybox="gallery-1"
+                          data-caption=""
+                          ><span class="flaticon-add-1"></span
+                        ></a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Gallery Block -->
+            <div class="gallery-block">
+              <div class="inner-box">
+                <div class="image">
+                  <img src="images/SCEECS/SCEECS24_2.JPG" alt="" />
+                  <!-- Overlay Box -->
+                  <div class="overlay-box">
+                    <div class="overlay-inner">
+                      <div class="overlay-content">
+                        <a
+                          class="plus"
+                          href="images/SCEECS/SCEECS24_2.JPG"
+                          data-fancybox="gallery-1"
+                          data-caption=""
+                          ><span class="flaticon-add-1"></span
+                        ></a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Gallery Block -->
+            <div class="gallery-block">
+              <div class="inner-box">
+                <div class="image">
+                  <img src="images/SCEECS/SCEECS24_7.JPG" alt="" />
+                  <!-- Overlay Box -->
+                  <div class="overlay-box">
+                    <div class="overlay-inner">
+                      <div class="overlay-content">
+                        <a
+                          class="plus"
+                          href="images/SCEECS/SCEECS24_7.JPG"
+                          data-fancybox="gallery-1"
+                          data-caption=""
+                          ><span class="flaticon-add-1"></span
+                        ></a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Gallery Block -->
+            <div class="gallery-block">
+              <div class="inner-box">
+                <div class="image">
+                  <img src="images/SCEECS/SCEECS24_5.JPG" alt="" />
+                  <!-- Overlay Box -->
+                  <div class="overlay-box">
+                    <div class="overlay-inner">
+                      <div class="overlay-content">
+                        <a
+                          class="plus"
+                          href="images/SCEECS/SCEECS24_5.JPG"
+                          data-fancybox="gallery-1"
+                          data-caption=""
+                          ><span class="flaticon-add-1"></span
+                        ></a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Gallery Block -->
+            <div class="gallery-block">
+              <div class="inner-box">
+                <div class="image">
+                  <img src="images/SCEECS/SCEECS24_3.JPG" alt="" />
+                  <!-- Overlay Box -->
+                  <div class="overlay-box">
+                    <div class="overlay-inner">
+                      <div class="overlay-content">
+                        <a
+                          class="plus"
+                          href="images/SCEECS/SCEECS24_3.JPG"
+                          data-fancybox="gallery-1"
+                          data-caption=""
+                          ><span class="flaticon-add-1"></span
+                        ></a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Gallery Block -->
+            <div class="gallery-block">
+              <div class="inner-box">
+                <div class="image">
+                  <img src="images/SCEECS/SCEECS24_8.JPG" alt="" />
+                  <!-- Overlay Box -->
+                  <div class="overlay-box">
+                    <div class="overlay-inner">
+                      <div class="overlay-content">
+                        <a
+                          class="plus"
+                          href="images/SCEECS/SCEECS24_8.JPG"
+                          data-fancybox="gallery-1"
+                          data-caption=""
+                          ><span class="flaticon-add-1"></span
+                        ></a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
             <!-- Gallery Block -->
             <div class="gallery-block">
               <div class="inner-box">
