--- a/gallery.html
+++ b/gallery.html
@@ -186,15 +186,176 @@
 
                     <div class="filter-list row clearfix">
                         <!-- Gallery Block -->
-                        <div class="gallery-block mix all gl col-lg-4 col-md-6 col-sm-12" style="display: none;">
+                        <!-- <div class="gallery-block mix all gl col-lg-4 col-md-6 col-sm-12" style="display: none;">
                             <div class="inner-box">
                                 <div class="image">
-                                    <img src="bg.png" alt="" />
+                                    <img src="bg.png" alt="" /> -->
+                                    <!-- Overlay Box -->
+                                    <!-- <div class="overlay-box">
+                                        <div class="overlay-inner">
+                                            <div class="overlay-content">
+                                                <a class="plus" href="bg.png" data-fancybox="gallery-2"
+                                                    data-caption=""><span class="flaticon-add-1"></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> -->
+
+                        <!-- Gallery Block -->
+                        <div class="gallery-block mix all gl col-lg-4 col-md-6 col-sm-12">
+                            <div class="inner-box">
+                                <div class="image">
+                                    <img src="images/SCEECS/SCEECS24_3.JPG" alt="" />
                                     <!-- Overlay Box -->
                                     <div class="overlay-box">
                                         <div class="overlay-inner">
                                             <div class="overlay-content">
-                                                <a class="plus" href="bg.png" data-fancybox="gallery-2"
+                                                <a class="plus" href="images/SCEECS/SCEECS24_3.JPG" data-fancybox="gallery-2"
+                                                    data-caption=""><span class="flaticon-add-1"></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Gallery Block -->
+                        <div class="gallery-block mix all gl col-lg-4 col-md-6 col-sm-12">
+                            <div class="inner-box">
+                                <div class="image">
+                                    <img src="images/SCEECS/SCEECS24_4.JPG" alt="" />
+                                    <!-- Overlay Box -->
+                                    <div class="overlay-box">
+                                        <div class="overlay-inner">
+                                            <div class="overlay-content">
+                                                <a class="plus" href="images/SCEECS/SCEECS24_4.JPG" data-fancybox="gallery-2"
+                                                    data-caption=""><span class="flaticon-add-1"></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Gallery Block -->
+                        <div class="gallery-block mix all gl col-lg-4 col-md-6 col-sm-12">
+                            <div class="inner-box">
+                                <div class="image">
+                                    <img src="images/SCEECS/SCEECS24_5.JPG" alt="" />
+                                    <!-- Overlay Box -->
+                                    <div class="overlay-box">
+                                        <div class="overlay-inner">
+                                            <div class="overlay-content">
+                                                <a class="plus" href="images/SCEECS/SCEECS24_5.JPG" data-fancybox="gallery-2"
+                                                    data-caption=""><span class="flaticon-add-1"></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Gallery Block -->
+                        <div class="gallery-block mix all workshop col-lg-4 col-md-6 col-sm-12">
+                            <div class="inner-box">
+                                <div class="image">
+                                    <img src="images/SCEECS/SCEECS24_9.JPG" alt="" />
+                                    <!-- Overlay Box -->
+                                    <div class="overlay-box">
+                                        <div class="overlay-inner">
+                                            <div class="overlay-content">
+                                                <a class="plus" href="images/SCEECS/SCEECS24_9.JPG" data-fancybox="gallery-2"
+                                                    data-caption=""><span class="flaticon-add-1"></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Gallery Block -->
+                        <div class="gallery-block mix all team col-lg-4 col-md-6 col-sm-12">
+                            <div class="inner-box">
+                                <div class="image">
+                                    <img src="images/SCEECS/SCEECS24_8.JPG" alt="" />
+                                    <!-- Overlay Box -->
+                                    <div class="overlay-box">
+                                        <div class="overlay-inner">
+                                            <div class="overlay-content">
+                                                <a class="plus" href="images/SCEECS/SCEECS24_8.JPG" data-fancybox="gallery-2"
+                                                    data-caption=""><span class="flaticon-add-1"></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Gallery Block -->
+                        <div class="gallery-block mix all workshop col-lg-4 col-md-6 col-sm-12">
+                            <div class="inner-box">
+                                <div class="image">
+                                    <img src="images/SCEECS/SCEECS24_6.JPG" alt="" />
+                                    <!-- Overlay Box -->
+                                    <div class="overlay-box">
+                                        <div class="overlay-inner">
+                                            <div class="overlay-content">
+                                                <a class="plus" href="images/SCEECS/SCEECS24_6.JPG" data-fancybox="gallery-2"
+                                                    data-caption=""><span class="flaticon-add-1"></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Gallery Block -->
+                        <div class="gallery-block mix all workshop col-lg-4 col-md-6 col-sm-12">
+                            <div class="inner-box">
+                                <div class="image">
+                                    <img src="images/SCEECS/SCEECS24_7.JPG" alt="" />
+                                    <!-- Overlay Box -->
+                                    <div class="overlay-box">
+                                        <div class="overlay-inner">
+                                            <div class="overlay-content">
+                                                <a class="plus" href="images/SCEECS/SCEECS24_7.JPG" data-fancybox="gallery-2"
+                                                    data-caption=""><span class="flaticon-add-1"></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Gallery Block -->
+                        <div class="gallery-block mix all workshop col-lg-4 col-md-6 col-sm-12">
+                            <div class="inner-box">
+                                <div class="image">
+                                    <img src="images/SCEECS/SCEECS24_1.JPG" alt="" />
+                                    <!-- Overlay Box -->
+                                    <div class="overlay-box">
+                                        <div class="overlay-inner">
+                                            <div class="overlay-content">
+                                                <a class="plus" href="images/SCEECS/SCEECS24_1.JPG" data-fancybox="gallery-2"
+                                                    data-caption=""><span class="flaticon-add-1"></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Gallery Block -->
+                        <div class="gallery-block mix all conference col-lg-4 col-md-6 col-sm-12">
+                            <div class="inner-box">
+                                <div class="image">
+                                    <img src="images/SCEECS/SCEECS24_2.JPG" alt="" />
+                                    <!-- Overlay Box -->
+                                    <div class="overlay-box">
+                                        <div class="overlay-inner">
+                                            <div class="overlay-content">
+                                                <a class="plus" href="images/SCEECS/SCEECS24_2.JPG" data-fancybox="gallery-2"
                                                     data-caption=""><span class="flaticon-add-1"></span></a>
                                             </div>
                                         </div>
@@ -255,24 +416,7 @@
                                 </div>
                             </div>
                         </div>
-
-                        <!-- Gallery Block -->
-                        <div class="gallery-block mix all workshop col-lg-4 col-md-6 col-sm-12">
-                            <div class="inner-box">
-                                <div class="image">
-                                    <img src="images/gallery/workshop.jpg" alt="" />
-                                    <!-- Overlay Box -->
-                                    <div class="overlay-box">
-                                        <div class="overlay-inner">
-                                            <div class="overlay-content">
-                                                <a class="plus" href="images/gallery/workshop.jpg" data-fancybox="gallery-2"
-                                                    data-caption=""><span class="flaticon-add-1"></span></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+ 
 
                         <!-- Gallery Block -->
                         <div class="gallery-block mix all gl col-lg-4 col-md-6 col-sm-12">
