--- a/index.html
+++ b/index.html
@@ -1971,12 +1971,12 @@
           <div class="gallery-block col-lg-3 col-md-6 col-sm-12">
             <div class="inner-box">
               <div class="image">
-                <img src="images/gallery/congference1.jpg" alt="" />
+                <img src="images/SCEECS/SCEECS24_1.JPG" alt="" />
                 <!-- Overlay Box -->
                 <div class="overlay-box">
                   <div class="overlay-inner">
                     <div class="overlay-content">
-                      <a class="plus" href="images/gallery/congference1.jpg" data-fancybox="gallery-1" data-caption=""><span
+                      <a class="plus" href="images/SCEECS/SCEECS24_1.JPG" data-fancybox="gallery-1" data-caption=""><span
                           class="flaticon-add-1"></span></a>
                     </div>
                   </div>
@@ -1989,12 +1989,12 @@
           <div class="gallery-block col-lg-3 col-md-6 col-sm-12">
             <div class="inner-box">
               <div class="image">
-                <img src="images/gallery/lakshay1.jpg" alt="" />
+                <img src="images/SCEECS/SCEECS24_2.JPG" alt="" />
                 <!-- Overlay Box -->
                 <div class="overlay-box">
                   <div class="overlay-inner">
                     <div class="overlay-content">
-                      <a class="plus" href="images/gallery/lakshay1.jpg" data-fancybox="gallery-1" data-caption=""><span
+                      <a class="plus" href="images/SCEECS/SCEECS24_2.JPG" data-fancybox="gallery-1" data-caption=""><span
                           class="flaticon-add-1"></span></a>
                     </div>
                   </div>
@@ -2007,12 +2007,12 @@
           <div class="gallery-block col-lg-3 col-md-6 col-sm-12">
             <div class="inner-box">
               <div class="image">
-                <img src="images/gallery/conference31.jpg" alt="" />
+                <img src="images/SCEECS/SCEECS24_3.JPG" alt="" />
                 <!-- Overlay Box -->
                 <div class="overlay-box">
                   <div class="overlay-inner">
                     <div class="overlay-content">
-                      <a class="plus" href="images/gallery/conference31.jpg" data-fancybox="gallery-1" data-caption=""><span
+                      <a class="plus" href="images/SCEECS/SCEECS24_3.JPG" data-fancybox="gallery-1" data-caption=""><span
                           class="flaticon-add-1"></span></a>
                     </div>
                   </div>
@@ -2025,12 +2025,12 @@
           <div class="gallery-block col-lg-3 col-md-6 col-sm-12">
             <div class="inner-box">
               <div class="image">
-                <img src="images/gallery/workshop11.jpg" alt="" />
+                <img src="images/SCEECS/SCEECS24_4.JPG" alt="" />
                 <!-- Overlay Box -->
                 <div class="overlay-box">
                   <div class="overlay-inner">
                     <div class="overlay-content">
-                      <a class="plus" href="images/gallery/workshop11.jpg" data-fancybox="gallery-1" data-caption=""><span
+                      <a class="plus" href="images/SCEECS/SCEECS24_4.JPG" data-fancybox="gallery-1" data-caption=""><span
                           class="flaticon-add-1"></span></a>
                     </div>
                   </div>
@@ -2043,12 +2043,12 @@
           <div class="gallery-block col-lg-3 col-md-6 col-sm-12">
             <div class="inner-box">
               <div class="image">
-                <img src="images/gallery/babbarSeminar1.jpg" alt="" />
+                <img src="images/SCEECS/SCEECS24_5.JPG" alt="" />
                 <!-- Overlay Box -->
                 <div class="overlay-box">
                   <div class="overlay-inner">
                     <div class="overlay-content">
-                      <a class="plus" href="images/gallery/babbarSeminar1.jpg" data-fancybox="gallery-1" data-caption=""><span
+                      <a class="plus" href="images/SCEECS/SCEECS24_5.JPG" data-fancybox="gallery-1" data-caption=""><span
                           class="flaticon-add-1"></span></a>
                     </div>
                   </div>
@@ -2061,12 +2061,12 @@
           <div class="gallery-block col-lg-3 col-md-6 col-sm-12">
             <div class="inner-box">
               <div class="image">
-                <img src="images/gallery/lakshaySeminar.jpg" alt="" />
+                <img src="images/SCEECS/SCEECS24_9.JPG" alt="" />
                 <!-- Overlay Box -->
                 <div class="overlay-box">
                   <div class="overlay-inner">
                     <div class="overlay-content">
-                      <a class="plus" href="images/gallery/lakshaySeminar.jpg" data-fancybox="gallery-1" data-caption=""><span
+                      <a class="plus" href="images/SCEECS/SCEECS24_9.JPG" data-fancybox="gallery-1" data-caption=""><span
                           class="flaticon-add-1"></span></a>
                     </div>
                   </div>
@@ -2079,12 +2079,12 @@
           <div class="gallery-block col-lg-3 col-md-6 col-sm-12">
             <div class="inner-box">
               <div class="image">
-                <img src="images/gallery/babbar1.jpg" alt="" />
+                <img src="images/SCEECS/SCEECS24_7.JPG" alt="" />
                 <!-- Overlay Box -->
                 <div class="overlay-box">
                   <div class="overlay-inner">
                     <div class="overlay-content">
-                      <a class="plus" href="images/gallery/babbar1.jpg" data-fancybox="gallery-1" data-caption=""><span
+                      <a class="plus" href="images/SCEECS/SCEECS24_7.JPG" data-fancybox="gallery-1" data-caption=""><span
                           class="flaticon-add-1"></span></a>
                     </div>
                   </div>
@@ -2097,12 +2097,12 @@
           <div class="gallery-block col-lg-3 col-md-6 col-sm-12">
             <div class="inner-box">
               <div class="image">
-                <img src="images/gallery/team.jpg" alt="" />
+                <img src="images/SCEECS/SCEECS24_8.JPG" alt="" />
                 <!-- Overlay Box -->
                 <div class="overlay-box">
                   <div class="overlay-inner">
                     <div class="overlay-content">
-                      <a class="plus" href="images/gallery/team.jpg" data-fancybox="gallery-1" data-caption=""><span
+                      <a class="plus" href="images/SCEECS/SCEECS24_8.JPG" data-fancybox="gallery-1" data-caption=""><span
                           class="flaticon-add-1"></span></a>
                     </div>
                   </div>
