--- a/speaker.html
+++ b/speaker.html
@@ -246,6 +246,38 @@
           <div class="separator"></div>
         </div>
         <div class="row clearfix">
+
+          <div class="speaker-block-two style-two col-lg-3 col-md-6 col-sm-12">
+            <div class="inner-box">
+              <div class="dots-one"></div>
+              <div class="dots-two"></div>
+              <div class="image">
+                <img src="images/gl/kamran_ali.jpeg" alt="" />
+              </div>
+              <div class="lower-content">
+                <h3>
+                  <a href="https://www.linkedin.com/in/systemdesignengineer/?originalSubdomain=in" target="_blank">Kamran Ali</a>
+                </h3>
+                <div class="designation">Sr. Engineering Manager | Atlassian</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="speaker-block-two style-two col-lg-3 col-md-6 col-sm-12">
+            <div class="inner-box">
+              <div class="dots-one"></div>
+              <div class="dots-two"></div>
+              <div class="image">
+                <img src="images/gl/sunchit_dudeja.jpeg" alt="" />
+              </div>
+              <div class="lower-content">
+                <h3>
+                  <a href="https://www.linkedin.com/in/sunchitdudeja/?original_referer=https%3A%2F%2Fwww%2Ebing%2Ecom%2F&originalSubdomain=in" target="_blank">Sunchit Dudeja</a>
+                </h3>
+                <div class="designation">SDE | Adobe</div>
+              </div>
+            </div>
+          </div>
           
           <div class="speaker-block-two style-two col-lg-3 col-md-6 col-sm-12">
             <div class="inner-box">
