--- a/contact.html
+++ b/contact.html
@@ -195,7 +195,7 @@
                         <div class="inner-box">
                             <h3>IEEE - MSB</h3>
                             <div class="text">
-                                c/o Dr. Jyoti Singhai, Branch Counsellor Professor, Department of Electronics and
+                                c/o Dr. Dheeraj Kumar Agarwal, Branch Counsellor Professor, Department of Electronics and
                                 Communication Engineering.
                             </div>
                         </div>
@@ -231,7 +231,7 @@
                             <div class="dots-one"></div>
                             <div class="dots-two"></div>
                             <div class="image">
-                                <img src="./images/Tilak.jpg" alt="" />
+                                <img src="./images/contactTeam/vedant.jpg" alt="" />
                                 <ul class="social-box">
                                     <!-- <li><a href="tel:+91-8529458935"><span class="fa fa-phone"></span></a></li> -->
                                     <!-- <li>
@@ -239,13 +239,13 @@
                       ></a>
                                     </li> -->
                                     <li>
-                                        <a href="https://www.linkedin.com/in/tilak-mangal-768855241/"
+                                        <a href="https://www.linkedin.com/in/vedant-jaiswal-380798265/"
                                             target="_blank"><span class="fab fa-linkedin-in"></span></a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="#" target="_blank">Mr. Tilak Mangal</a></h3>
+                                <h3><a href="#" target="_blank">Mr. Vedant Jaiswal</a></h3>
                                 <div class="designation">Organizing Co-chair</div>
                             </div>
                         </div>
@@ -257,18 +257,18 @@
                             <div class="dots-one"></div>
                             <div class="dots-two"></div>
                             <div class="image">
-                                <img src="./images/Ayush Verma.jpg" alt="" />
+                                <img src="./images/contactTeam/Yashika.jpg" alt="" />
                                 <ul class="social-box">
                                     <!-- <li><a href="tel:+91-7987307024"><span class="fa fa-phone"></span></a></li> -->
 
                                     <li>
-                                        <a href="https://www.linkedin.com/in/ayush-kr-verma-2b986922b/"
+                                        <a href="https://www.linkedin.com/in/yashika-lawani-861457191/"
                                             target="_blank"><span class="fab fa-linkedin-in"></span></a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="#">Mr. Ayush Verma
+                                <h3><a href="#">Ms Yashika Lawani 
                                 </a></h3>
                                 <div class="designation">Publication Co-chair</div>
                             </div>
@@ -280,18 +280,18 @@
                             <div class="dots-one"></div>
                             <div class="dots-two"></div>
                             <div class="image">
-                                <img src="./images/Deepanshu Jain.jpg" alt="" />
+                                <img src="./images/contactTeam/priyanshi_khandelwal.jpg" alt="" />
                                 <ul class="social-box">
                                     <!-- <li><a href="tel:+91-7987307024"><span class="fa fa-phone"></span></a></li> -->
 
                                     <li>
-                                        <a href="https://www.linkedin.com/in/deepanshu-jain-90831b208" target="_blank"><span
+                                        <a href="https://www.linkedin.com/in/priyanshi-khandelwal-b56380276/" target="_blank"><span
                                                 class="fab fa-linkedin-in"></span></a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="#">Mr. Deepanshu Jain</a></h3>
+                                <h3><a href="#">Ms. Priyanshi Khandelwal</a></h3>
                                 <div class="designation">Program Co-chair</div>
                             </div>
                         </div>
@@ -303,18 +303,18 @@
                             <div class="dots-one"></div>
                             <div class="dots-two"></div>
                             <div class="image">
-                                <img src="./images/Rohaan khan.jpg" alt="" />
+                                <img src="./images/contactTeam/vvk.jpg" alt="" />
                                 <ul class="social-box">
                                     <!-- <li><a href="tel:+91-7426913306"><span class="fa fa-phone"></span></a></li> -->
 
                                     <li>
-                                        <a href="https://www.linkedin.com/in/rohaan-khan-334135244/" target="_blank"><span
+                                        <a href="https://www.linkedin.com/in/vivek-kumar-9ba07a252/" target="_blank"><span
                                                 class="fab fa-linkedin-in"></span></a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="#" target="_blank">Mr. Rohaan Khan</a></h3>
+                                <h3><a href="#" target="_blank">Mr. Vivek Kumar</a></h3>
                                 <div class="designation">Finance Co-chair</div>
                             </div>
                         </div>
