--- a/index.html
+++ b/index.html
@@ -441,20 +441,20 @@
     <!-- End Banner Section -->
 
     <!-- Timer Section -->
-    <section class="timer-section">
+    <!-- <section class="timer-section">
       <div class="auto-container">
         <div class="inner-container margin-top">
-          <div class="row clearfix">
+          <div class="row clearfix"> -->
             <!-- Title Column -->
-            <div class="title-column col-lg-4 col-md-12 col-sm-12">
+            <!-- <div class="title-column col-lg-4 col-md-12 col-sm-12">
               <div class="inner-column">
                 <h2>Until Event Start</h2>
                 <div class="text">Time Remaining</div>
               </div>
-            </div>
+            </div> -->
 
             <!-- Time Column -->
-            <div class="time-column col-lg-8 col-md-12 col-sm-12">
+            <!-- <div class="time-column col-lg-8 col-md-12 col-sm-12">
               <div class="inner-column">
                 <div class="time-counter">
                   <div class="time-countdown clearfix" data-countdown="2025/1/18"></div>
@@ -464,7 +464,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- End Timer Section -->
 
     <!-- Welcome Section -->
