Link issue in Nav and Footer solved Image resolution issue solved in About page Updated GL count for this year

--- a/about.html
+++ b/about.html
@@ -370,8 +370,8 @@
               <div class="inner-box">
                 <div class="dots-one"></div>
                 <div class="dots-two"></div>
-                <div class="image">
-                  <img src="images/resource/Dheeraj_Agrawal_Sir.jpg" alt="" />
+                <div class="image" style="height:168px;background-position: center;">
+                  <img src="images/resource/Dheeraj_Agrawal_Sir2.jpg" alt="" />
                 </div>
                 <div class="lower-content">
                   <h3><a href="#">Dr. Dheeraj Kumar Agarwal</a></h3>
@@ -385,7 +385,7 @@
               <div class="inner-box">
                 <div class="dots-one"></div>
                 <div class="dots-two"></div>
-                <div class="image">
+                <div class="image" style="height: auto;">
                   <img src="images/resource/Dr.Atul.Kumar.jpg" alt="" />
                 </div>
                 <div class="lower-content">
@@ -1057,7 +1057,7 @@
           <div class="auto-container">
             <ul>
               <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
+              <li><a style="color:#ff006a" href="about.html">About</a></li>
               <!-- <li><a href="workshop.html">Workshop</a></li> -->
               <li><a href="speaker.html">Guest Lecture</a></li>
 
