--- a/gallery.html
+++ b/gallery.html
@@ -826,7 +826,7 @@
                                         <!-- <li><a href="workshop.html">Workshop</a></li> -->
                                         <li><a href="speaker.html">Guest Lecture</a></li>
  <li >                                  <li><a href="callforpaper.html">Call for Paper</a></li>
-                                            <a href="gallery.html">Gallery</a>
+                                            <a style="color:#ff006a" href="gallery.html" class="bugFix">Gallery</a>
                                         </li>
                                         
                                         <li><a href="contact.html">Contact Us</a></li>
