--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
             right: -10px !important; 
         }
         .spcialDottReview{
-            right: -85px !important;
+            right: -81px !important;
+        }
+        .submissionDot{
+            right: -10px !important;
+            padding-right: 0px !important;
+        }
+        .acceptanceDot{
+            right: -75px !important;
+            padding-right: 0px !important;
         }
         .specialBoxCameraReady{
             left: -420px !important;
@@ -1197,7 +1205,7 @@
                               <!-- Program Info -->
 
                               <div class="program-info makeDotResponsive">
-                                 SUBMISSIONS OPEN<span class="time">15 Nov 2024</span><span class="dott"></span>
+                                 SUBMISSIONS OPEN<span class="time">15 Nov 2024</span><span class="dott submissionDot"></span>
                               </div>
                               <h3><a class="bold">Submit paper on Microsoft CMT.</a></h3>
                               <span><a href="https://cmt3.research.microsoft.com/User/Login?ReturnUrl=%2FSCEECS2025" target="_blank">here</a></span>
@@ -1262,7 +1270,7 @@
                               <!-- Program Info -->
                               <!-- its media queries is on the top of the page -->
                               <div class="program-info paperPresentationBox"  >
-                                  Paper Presentation<span class="time">18-19 Jan 2025</span><span class="dott"></span>
+                                  Paper Presentation<span class="time">18-19 Jan 2025</span><span class="dott acceptanceDot"></span>
                               </div>
                               <h3><a class="bold">Accepted Papers will be presented in conference in hybrid mode.</a></h3>
                           </div>
@@ -2252,7 +2260,7 @@
                       <div class="inner">
                         <div class="content">
                           <div class="count-outer count-box alternate">
-                            <span class="count-text" data-speed="2000" data-stop="1">0</span>
+                            <span class="count-text" data-speed="2000" data-stop="2">0</span>
                           </div>
                           <h4 class="counter-title">
                             Guest <br>
@@ -2409,18 +2417,14 @@
       <div class="footer-nav">
         <div class="auto-container">
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a style="color:#ff006a" href="index.html" >Home</a></li>
                                         <li><a href="about.html">About</a></li>
                                         <!-- <li><a href="workshop.html">Workshop</a></li> -->
                                         <li><a href="speaker.html">Guest Lecture</a></li>
- <li>                                   <li><a href="callforpaper.html">Call for Paper</a></li>
-                                            <a href="gallery.html">Gallery</a>
-                                        </li>
-                                        
+                                    <li><a href="callforpaper.html">Call for Paper</a></li>
+                                        </li><a href="gallery.html" class="bugFix">Gallery</a></li> 
                                         <li><a href="contact.html">Contact Us</a></li>
-            <li>
-              
-            </li>
+                                        <li></li>
           </ul>
         </div>
       </div>
