--- a/callforpaper.html
+++ b/callforpaper.html
@@ -30,7 +30,15 @@
             right: -10px !important; 
         }
         .spcialDottReview{
-            right: -85px !important;
+            right: -81px !important;
+        }
+        .submissionDot{
+            right: -10px !important;
+            padding-right: 0px !important;
+        }
+        .acceptanceDot{
+            right: -75px !important;
+            padding-right: 0px !important;
         }
         .specialBoxCameraReady{
             left: -420px !important;
@@ -461,7 +469,7 @@
                                 <div class="content-inner">
                                     <!-- Program Info -->
                                     <div class="program-info makeDotResponsive">
-                                       SUBMISSIONS OPEN<span class="time">15 Nov 2025</span><span class="dott"></span>
+                                       SUBMISSIONS OPEN<span class="time">15 Nov 2025</span><span class="dott submissionDot"></span>
                                     </div>
                                     <h3><a class="bold">Submit paper on Microsoft CMT.</a></h3>
                                     <span ><a href="https://cmt3.research.microsoft.com/User/Login?ReturnUrl=%2FSCEECS2025" target="_blank">here</a></span>
@@ -526,7 +534,7 @@
                                     <!-- Program Info -->
                                     <!-- its media queries is on the top of the page -->
                                     <div class="program-info paperPresentationBox"  >
-                                        Paper Presentation<span class="time">18-19 Jan 2025</span><span class="dott"></span>
+                                        Paper Presentation<span class="time">18-19 Jan 2025</span><span class="dott acceptanceDot"></span>
                                     </div>
                                     <h3><a class="bold">Accepted Papers will be presented in conference in hybrid mode.</a></h3>
                                 </div>
@@ -725,7 +733,7 @@ For all other papers the copyright notice is: 979-8-3503-4846-0/24/$31.00 ©2024
                                         <li><a href="about.html">About</a></li>
                                         <!-- <li><a href="workshop.html">Workshop</a></li> -->
                                         <li><a href="speaker.html">Guest Lecture</a></li>
-                                        <li><a href="callforpaper.html">Call For Paper</a></li>
+                                        <li><a style="color:#ff006a" href="callforpaper.html">Call For Paper</a></li>
  <li>
                                             <a href="gallery.html">Gallery</a>
                                         </li>
