--- a/contact.html
+++ b/contact.html
@@ -401,10 +401,10 @@
                                         <!-- <li><a href="workshop.html">Workshop</a></li> -->
                                         <li><a href="speaker.html">Guest Lecture</a></li>
  <li>                                       <li><a href="callforpaper.html">Call for Paper</a></li>
-                                            <a href="gallery.html">Gallery</a>
+                                            <a href="gallery.html" class="bugFix">Gallery</a>
                                         </li>
                                         
-                                        <li><a href="contact.html">Contact Us</a></li>
+                                        <li><a style="color:#ff006a" href="contact.html">Contact Us</a></li>
                         <li>
                             <!-- <a href="https://forms.gle/eNZ2vN988XX5GTFK8" target="_blank">Register for GL</a -->
                             <!-- > -->
