--- a/speaker.html
+++ b/speaker.html
@@ -818,7 +818,7 @@
             <li><a href="index.html">Home</a></li>
                                         <li><a href="about.html">About</a></li>
                                         <!-- <li><a href="workshop.html">Workshop</a></li> -->
-                                        <li><a href="speaker.html">Guest Lecture</a></li>
+                                        <li><a style="color:#ff006a" href="speaker.html">Guest Lecture</a></li>
  <li>                                   <li><a href="callforpaper.html">Call for Paper</a></li>
  <li>
                                             <a href="gallery.html">Gallery</a>
