--- a/index.html
+++ b/index.html
@@ -425,13 +425,13 @@
             <div class="inner-column">
               <h2>
                 IEEE <br />
-                SCEECS 2025
+                SCEECS 2026
               </h2>
 <!--               <div class="text">
                 coming soon
               </div> -->
               <div class="text">
-                18th – 19th January 2025, Bhopal, India.
+                31st Jan - 1st Feb 2026, Bhopal, India.
               </div>
               <!-- Buttons Box -->
               <div class="buttons-box clearfix">
@@ -449,30 +449,30 @@
     <!-- End Banner Section -->
 
     <!-- Timer Section -->
-    <!-- <section class="timer-section">
+     <section class="timer-section">
       <div class="auto-container">
         <div class="inner-container margin-top">
-          <div class="row clearfix"> -->
+          <div class="row clearfix"> 
             <!-- Title Column -->
-            <!-- <div class="title-column col-lg-4 col-md-12 col-sm-12">
+           <div class="title-column col-lg-4 col-md-12 col-sm-12">
               <div class="inner-column">
                 <h2>Until Event Start</h2>
                 <div class="text">Time Remaining</div>
               </div>
-            </div> -->
+            </div> 
 
             <!-- Time Column -->
-            <!-- <div class="time-column col-lg-8 col-md-12 col-sm-12">
+            <div class="time-column col-lg-8 col-md-12 col-sm-12">
               <div class="inner-column">
                 <div class="time-counter">
-                  <div class="time-countdown clearfix" data-countdown="2025/1/18"></div>
+                  <div class="time-countdown clearfix" data-countdown="2026/1/31"></div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </section> -->
+    </section> 
     <!-- End Timer Section -->
 
     <!-- Welcome Section -->
