Feat:New Logo Added

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                 <div class="logo">
                   <a href="index.html"
                     ><img
-                      src="images/logo.png"
+                      src="images/logo2026.png"
                       alt=""
                       title=""
                       id="mainlogo"
@@ -98,7 +98,7 @@
             <div class="logo pull-left">
               <a href="index.html" class="img-responsive"
                 ><img
-                  src="images/small-logo.png"
+                  src="images/logo2026.png"
                   alt="logo"
                   title=""
                   style="width: 80px; height: 56px"
@@ -136,7 +136,7 @@
           <nav class="menu-box" style="background-color: rgb(4, 4, 36)">
             <div class="nav-logo">
               <a href="index.html"
-                ><img src="images/logo-dark.png" alt="" title=""
+                ><img src="images/logo2026.png" alt="" title=""
               /></a>
             </div>
 
@@ -1017,7 +1017,7 @@
               &nbsp;
               <a href="index.html"
                 ><img
-                  src="images/med-logo.png"
+                  src="images/logo2026.png"
                   alt=""
                   style="width: 80px; height: 57px"
               /></a>
