--- a/guidelines.html
+++ b/guidelines.html
@@ -66,7 +66,7 @@
 
                         <div class="pull-left logo-box">
                             <div class="logo">
-                                <a href="index.html"><img src="images/logo.png" alt="" title="" id="mainlogo"></a>
+                                <a href="index.html"><img src="images/logo2026.png" alt="" title="" id="mainlogo" style="width: 80px; height: 57px;" ></a>
                             </div>
 
                             <!--Mobile Navigation Toggler For Mobile-->
@@ -132,7 +132,7 @@
                 <div class="auto-container clearfix">
                     <!--Logo-->
                     <div class="logo pull-left">
-                        <a href="index.html" class="img-responsive"><img src="images/small-logo.png" alt="logo"
+                        <a href="index.html" class="img-responsive"><img src="images/logo2026.png" alt="logo" style="width: 80px; height: 57px;" 
                                 title="" style="width: 80px; height: 56px;"></a>
                     </div>
 
@@ -163,7 +163,7 @@
                 <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
                 <nav class="menu-box">
                     <div class="nav-logo">
-                        <a href="index.html"><img src="images/logo-dark.png" alt="" title=""></a>
+                        <a href="index.html"><img src="images/logo2026.png" alt="" title="" style="width: 80px; height: 57px;" ></a>
                     </div>
 
                     <ul class="navigation clearfix">
@@ -404,7 +404,7 @@
                     <div class="logo">
                         <a href="index.html"><img src="images/ieee-logo-white.png" alt="" /></a>
                         &nbsp;
-                        <a href="index.html"><img src="images/med-logo.png" alt="" /></a>
+                        <a href="index.html"><img src="images/logo2026.png" alt="" style="width: 80px; height: 57px;" /></a>
                     </div>
                     <div class="text">IEEE is the world’s largest technical professional organization. It is dedicated
                         to the advancement of technology for the betterment of humanity.
