--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
           <div class="clearfix">
             <div class="pull-left logo-box">
               <div class="logo">
-                <a href="index.html"><img src="images/logo.png" alt="" title="" id="mainlogo" style="width: 90px; height: 59px;"/></a>
+                <a href="index.html"><img src="images/logo2026.png" alt="" title="" id="mainlogo" style="width: 90px; height: 59px;"/></a>
               </div>
 
               <!--Mobile Navigation Toggler For Mobile-->
@@ -361,7 +361,7 @@
         <div class="auto-container clearfix">
           <!--Logo-->
           <div class="logo pull-left">
-            <a href="index.html" class="img-responsive"><img src="images/small-logo.png" alt="logo" title="" style="width: 80px; height: 56px;" /></a>
+            <a href="index.html" class="img-responsive"><img src="images/logo2026.png" alt="logo" title="" style="width: 80px; height: 56px;" /></a>
           </div>
 
           <!--Right Col-->
@@ -394,7 +394,7 @@
         <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
         <nav class="menu-box" style="background-color: rgb(4, 4, 36);">
           <div class="nav-logo">
-            <a href="index.html"><img src="images/logo-dark.png" alt="" title="" /></a>
+            <a href="index.html"><img src="images/logo2026.png" alt="" title="" /></a>
           </div>
 
           <ul class="navigation clearfix">
@@ -2388,7 +2388,7 @@
           <div class="logo">
             <a href="index.html"><img src="images/ieee-logo-white.png" alt="" /></a>
             &nbsp;
-            <a href="index.html"><img src="images/med-logo.png" alt="" style="width: 80px; height: 57px;" /></a>
+            <a href="index.html"><img src="images/logo2026.png" alt="" style="width: 80px; height: 57px;" /></a>
           </div>
           <div class="text">
             IEEE is the world’s largest technical professional organization.
