--- a/speaker.html
+++ b/speaker.html
@@ -31,7 +31,7 @@
           <div class="clearfix">
             <div class="pull-left logo-box">
               <div class="logo">
-                <a href="index.html"><img src="images/logo.png" alt="" title="" id="mainlogo" style="width: 90px; height: 59px;" /></a>
+                <a href="index.html"><img src="images/logo2026.png" alt="" title="" id="mainlogo" style="width: 90px; height: 59px;" /></a>
               </div>
 
               <!--Mobile Navigation Toggler For Mobile-->
@@ -98,7 +98,7 @@
         <div class="auto-container clearfix">
           <!--Logo-->
           <div class="logo pull-left">
-            <a href="index.html" class="img-responsive"><img src="images/small-logo.png" alt="logo" title="" style="width: 80px; height: 56px;" /></a>
+            <a href="index.html" class="img-responsive"><img src="images/logo2026.png" alt="logo" title="" style="width: 80px; height: 56px;" /></a>
           </div>
 
           <!--Right Col-->
@@ -128,7 +128,7 @@
 
         <nav class="menu-box" style="background-color: rgb(4, 4, 36);">
           <div class="nav-logo">
-            <a href="index.html"><img src="images/logo-dark.png" alt="" title="" /></a>
+            <a href="index.html"><img src="images/logo2026.png" alt="" title="" /></a>
           </div>
 
           <ul class="navigation clearfix"></ul>
@@ -787,7 +787,7 @@
           <!-- Footer Logo -->
           <div class="logo">
             <a href="index.html"><img src="images/ieee-logo-white.png" alt="" /></a> &nbsp;
-            <a href="index.html"><img src="images/med-logo.png" alt="" style="width: 80px; height: 57px;" /></a>
+            <a href="index.html"><img src="images/logo2026.png" alt="" style="width: 80px; height: 57px;" /></a>
           </div>
           <div class="text">
             IEEE is the world’s largest technical professional organization. It is dedicated to the advancement of
